[project]
name = "3d-example-plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipympl>=0.10.0",
    "jupyter>=1.1.1",
    "jupyterlab-git>=0.51.4",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
